# dynamic-life-navigator

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: config.toml
app/: __init__.py  main.py
docs/: backend-mvp-status.md  frontend-backend-integration-checklist.md  frontend-backend-integration-issues.md  mvp_backend_review.md  next-phase-schema-first-parser-plan.md  parser-quality-expansion-review.md  post-integration-closeout.md  step18_19_review.md  step20_21_review.md  step22-browser-walkthrough.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
logs/: push-webhook-sink.jsonl
migrations/: env.py
pm/: 00_Revision_Summary.md  03_Database_Schema_V2.md  05_System_Architecture_V2.md  07_Engineering_Addendum_V2_1.md
revised_pm/: 01_PRD_V2.md  02_API_Workflows_Prompts_V2.md  04_Frontend_Design_V2.md  06_User_Scenarios_Validation_V2.md
scripts/: debug_gemini_direct_request.py  rebuild_state_snapshot.py  replay_event_state.py  replay_gemini_event_from_db.py  run_push_webhook_sink.py  show_push_delivery_attempts.py  show_shadow_parser_drift.py  show_shadow_profile_drift.py
tests/: __init__.py  conftest.py  test_api_contract_shapes.py  test_config.py  test_db_metadata.py  test_dynamic_scores.py  test_end_to_end_flow.py  test_event_compaction.py  test_event_processing.py  test_gemini_direct_parser.py  test_gemini_direct_profile.py  test_health.py  test_logging_helpers.py  test_node_enrichment.py  test_nodes.py  (+14 more)
(+143 files in other folders)
